--- a/frame1.css
+++ b/frame1.css
@@ -58,6 +58,7 @@
   /* margin-right: 20px;
   margin-top: 10px; */
   border-radius: 12px;
+  width: 369px;
 }
 .frame1-card-elevated {
   top: 0px;
