--- a/frame1.css
+++ b/frame1.css
@@ -1,27 +1,28 @@
 .frame1-frame1 {
+  gap: 2vw;
   width: 100%;
   height: auto;
   display: flex;
   position: relative;
   align-items: center;
+  flex-shrink: 0;
   border-color: transparent;
   flex-direction: column;
-  background-color: #a59090;
 }
 .frame1-topappbar {
-  width: 100%;
-  height: 44px;
   display: flex;
-  padding: 8px 4px;
+  padding: 8px 0;
   position: relative;
+  align-self: stretch;
   align-items: center;
   flex-shrink: 0;
   border-color: transparent;
   margin-bottom: 41px;
-  background-color: #4a3d46;
+  justify-content: center;
+  background-color: rgba(255, 251, 254, 1);
 }
 .frame1-text {
-  color: #e2deec;
+  color: rgba(28, 27, 31, 1);
   height: auto;
   flex-grow: 1;
   align-self: auto;
@@ -32,9 +33,7 @@
 }
 .frame1-framecardrow {
   width: 100%;
-  height: 2057px;
   display: flex;
-  justify-content: left;
   padding: 0 40px;
   position: relative;
   flex-wrap: wrap;
@@ -42,27 +41,25 @@
   align-items: flex-start;
   flex-shrink: 0;
   border-color: transparent;
-  gap: 2vw;
+  margin-bottom: 41px;
+  justify-content: left;
 }
-
-.card {
-  border: $margin solid #4d4d4d;
-  flex: 1 0 auto;
+.frame1-card1 {
   height: 540px;
   display: flex;
   position: relative;
-  /* flex-grow: 1; */
+  flex-grow: 1;
+  margin-top: 10px;
   align-items: flex-start;
-  /* flex-shrink: 0; */
+  flex-shrink: 0;
   border-color: transparent;
-  /* margin-right: 20px;
-  margin-top: 10px; */
+  margin-right: 40px;
   border-radius: 12px;
 }
 .frame1-card-elevated {
   top: 0px;
   left: 0px;
-  width: 396px;
+  width: 380px;
   height: 540px;
   display: flex;
   overflow: hidden;
@@ -78,7 +75,7 @@
 .frame1-statelayer {
   top: 0px;
   left: 0px;
-  width: 396px;
+  width: 380px;
   height: 540px;
   display: flex;
   padding: 10px;
@@ -90,12 +87,13 @@
   justify-content: center;
 }
 .frame1-contentcontainer {
-  width: 412px;
+  width: 380px;
   height: 540px;
   display: flex;
   z-index: 1;
   overflow: hidden;
   position: relative;
+  flex-grow: 1;
   align-self: stretch;
   align-items: flex-start;
   border-color: transparent;
@@ -104,7 +102,7 @@
 .frame1-media-textcontent {
   top: 0px;
   left: 0px;
-  width: 396px;
+  width: 380px;
   display: flex;
   position: absolute;
   flex-grow: 1;
@@ -131,7 +129,7 @@
   border-color: transparent;
 }
 .frame1-text02 {
-  width: 376px;
+  width: 360px;
   display: flex;
   position: relative;
   flex-grow: 1;
@@ -150,7 +148,7 @@
   margin-bottom: 0;
 }
 .frame1-media {
-  width: 396px;
+  width: 380px;
   height: 264px;
   display: flex;
   position: relative;
@@ -249,6 +247,7 @@
   display: flex;
   position: relative;
   flex-grow: 1;
+  margin-top: 10px;
   align-items: flex-start;
   flex-shrink: 0;
   border-color: transparent;
@@ -258,7 +257,7 @@
 .frame1-card-elevated1 {
   top: 0px;
   left: 0px;
-  width: 396px;
+  width: 380px;
   height: 540px;
   display: flex;
   overflow: hidden;
@@ -274,7 +273,7 @@
 .frame1-statelayer2 {
   top: 0px;
   left: 0px;
-  width: 396px;
+  width: 380px;
   height: 540px;
   display: flex;
   padding: 10px;
@@ -286,12 +285,13 @@
   justify-content: center;
 }
 .frame1-contentcontainer1 {
-  width: 415px;
+  width: 380px;
   height: 540px;
   display: flex;
   z-index: 1;
   overflow: hidden;
   position: relative;
+  flex-grow: 1;
   align-self: stretch;
   align-items: flex-start;
   border-color: transparent;
@@ -300,7 +300,7 @@
 .frame1-media-textcontent1 {
   top: 0px;
   left: 0px;
-  width: 396px;
+  width: 380px;
   display: flex;
   position: absolute;
   flex-grow: 1;
@@ -327,7 +327,7 @@
   border-color: transparent;
 }
 .frame1-text19 {
-  width: 376px;
+  width: 360px;
   display: flex;
   position: relative;
   flex-grow: 1;
@@ -346,7 +346,7 @@
   margin-bottom: 0;
 }
 .frame1-media1 {
-  width: 396px;
+  width: 380px;
   height: 264px;
   display: flex;
   position: relative;
@@ -439,6 +439,7 @@
   display: flex;
   position: relative;
   flex-grow: 1;
+  margin-top: 10;
   align-items: flex-start;
   flex-shrink: 0;
   border-color: transparent;
@@ -447,7 +448,7 @@
 .frame1-card-elevated2 {
   top: 0px;
   left: 0px;
-  width: 396px;
+  width: 380px;
   height: 540px;
   display: flex;
   overflow: hidden;
@@ -463,7 +464,7 @@
 .frame1-statelayer4 {
   top: 0px;
   left: 0px;
-  width: 396px;
+  width: 380px;
   height: 540px;
   display: flex;
   padding: 10px;
@@ -475,7 +476,7 @@
   justify-content: center;
 }
 .frame1-contentcontainer2 {
-  width: 396px;
+  width: 380px;
   height: 540px;
   display: flex;
   z-index: 1;
@@ -490,7 +491,7 @@
 .frame1-media-textcontent2 {
   top: 0px;
   left: 0px;
-  width: 396px;
+  width: 380px;
   display: flex;
   position: absolute;
   flex-grow: 1;
@@ -517,7 +518,7 @@
   border-color: transparent;
 }
 .frame1-text43 {
-  width: 376px;
+  width: 360px;
   display: flex;
   position: relative;
   flex-grow: 1;
@@ -536,7 +537,7 @@
   margin-bottom: 0;
 }
 .frame1-media2 {
-  width: 396px;
+  width: 380px;
   height: 264px;
   display: flex;
   position: relative;
@@ -559,12 +560,6 @@
   margin-right: 0;
   margin-bottom: 0;
 }
-.frame1-text47 {
-  color: rgba(255, 255, 255, 1);
-}
-.frame1-text48 {
-  color: rgba(255, 0, 0, 1);
-}
 .frame1-textcontent2 {
   display: flex;
   padding: 16px;
@@ -575,7 +570,7 @@
   border-color: transparent;
   flex-direction: column;
 }
-.frame1-text63 {
+.frame1-text48 {
   color: rgba(73, 69, 79, 1);
   height: auto;
   flex-grow: 1;
@@ -615,7 +610,7 @@
   border-color: transparent;
   justify-content: center;
 }
-.frame1-text65 {
+.frame1-text50 {
   color: rgba(103, 80, 164, 1);
   height: auto;
   align-self: auto;
@@ -624,9 +619,340 @@
   margin-right: 0;
   margin-bottom: 0;
 }
+.frame1-table {
+  display: flex;
+  padding: 0 40px;
+  position: relative;
+  align-self: stretch;
+  align-items: flex-start;
+  flex-shrink: 0;
+  border-color: transparent;
+}
+.frame1-table1 {
+  width: 100%;
+  height: 702px;
+  display: flex;
+  position: relative;
+  align-self: stretch;
+  align-items: flex-start;
+  flex-shrink: 0;
+  border-color: transparent;
+  flex-direction: column;
+}
+.frame1-table1 {
+  display: flex;
+  overflow: hidden;
+  position: relative;
+  align-self: stretch;
+  align-items: flex-start;
+  border-color: rgba(91, 91, 91, 1);
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 4px;
+  flex-direction: column;
+  background-color: rgba(54, 54, 54, 1);
+}
+.frame1-row {
+  display: flex;
+  overflow: hidden;
+  position: relative;
+  align-self: stretch;
+  align-items: flex-start;
+  flex-shrink: 0;
+  border-color: transparent;
+  background-color: rgba(255, 255, 255, 0.00009999999747378752);
+}
+.frame1-cell {
+  height: 36px;
+  display: flex;
+  position: relative;
+  align-self: stretch;
+  align-items: center;
+  flex-shrink: 0;
+  border-color: rgba(91, 91, 91, 1);
+  border-style: solid;
+  border-width: Symbol(figma.mixed)px;
+  margin-right: 0px;
+  flex-direction: column;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.05000000074505806);
+}
+.frame1-content3 {
+  width: 346px;
+  display: flex;
+  padding: 10px 12px;
+  overflow: hidden;
+  position: relative;
+  align-self: stretch;
+  align-items: flex-start;
+  flex-shrink: 0;
+  border-color: transparent;
+  justify-content: center;
+}
+.frame1-text52 {
+  color: rgba(255, 255, 255, 1);
+  width: 96px;
+  height: auto;
+  font-size: 12px;
+  align-self: auto;
+  font-style: Semi Bold;
+  text-align: center;
+  font-family: Inter;
+  font-weight: 700;
+  line-height: 129.99999523162842%;
+  font-stretch: normal;
+  text-decoration: none;
+}
+.frame1-cell1 {
+  display: flex;
+  position: relative;
+  flex-grow: 1;
+  align-self: stretch;
+  align-items: center;
+  border-color: rgba(91, 91, 91, 1);
+  border-style: solid;
+  border-width: Symbol(figma.mixed)px;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.05000000074505806);
+}
+.frame1-content4 {
+  display: flex;
+  padding: 10px 12px;
+  overflow: hidden;
+  position: relative;
+  align-self: stretch;
+  align-items: center;
+  flex-shrink: 0;
+  border-color: transparent;
+  justify-content: center;
+}
+.frame1-text54 {
+  color: rgba(255, 255, 255, 1);
+  width: 96px;
+  height: auto;
+  font-size: 12px;
+  align-self: auto;
+  font-style: Semi Bold;
+  text-align: center;
+  font-family: Inter;
+  font-weight: 700;
+  line-height: 129.99999523162842%;
+  font-stretch: normal;
+  text-decoration: none;
+}
+.frame1-row1 {
+  display: flex;
+  overflow: hidden;
+  position: relative;
+  align-self: stretch;
+  align-items: flex-start;
+  flex-shrink: 0;
+  border-color: transparent;
+  background-color: rgba(255, 255, 255, 0.00009999999747378752);
+}
+.frame1-cell2 {
+  height: 36px;
+  display: flex;
+  position: relative;
+  align-self: stretch;
+  align-items: flex-start;
+  flex-shrink: 0;
+  border-color: rgba(91, 91, 91, 1);
+  border-style: solid;
+  border-width: Symbol(figma.mixed)px;
+  margin-right: 0px;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.0020000000949949026);
+}
+.frame1-content5 {
+  width: 347px;
+  display: flex;
+  padding: 10px 12px;
+  overflow: hidden;
+  position: relative;
+  align-self: stretch;
+  align-items: flex-start;
+  flex-shrink: 0;
+  border-color: transparent;
+}
+.frame1-text56 {
+  color: rgb(255, 255, 255);
+  height: auto;
+  flex-grow: 1;
+  font-size: 12px;
+  align-self: auto;
+  font-style: Regular;
+  text-align: center;
+  font-family: Inter;
+  font-weight: 400;
+  line-height: 130%;
+  font-stretch: normal;
+  margin-right: 0;
+  margin-bottom: 0;
+  text-decoration: none;
+}
+.frame1-cell3 {
+  display: flex;
+  position: relative;
+  flex-grow: 1;
+  align-self: stretch;
+  align-items: flex-start;
+  border-color: rgba(91, 91, 91, 1);
+  border-style: solid;
+  border-width: Symbol(figma.mixed)px;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.0020000000949949026);
+}
+.frame1-content6 {
+  display: flex;
+  padding: 10px 12px;
+  overflow: hidden;
+  position: relative;
+  align-self: stretch;
+  align-items: flex-start;
+  flex-shrink: 0;
+  border-color: transparent;
+}
+.frame1-text59 {
+  color: rgb(255, 255, 255);
+  height: auto;
+  flex-grow: 1;
+  font-size: 12px;
+  align-self: auto;
+  font-style: Regular;
+  text-align: center;
+  font-family: Inter;
+  font-weight: 400;
+  line-height: 130%;
+  font-stretch: normal;
+  margin-right: 0;
+  margin-bottom: 0;
+  text-decoration: none;
+}
+.frame1-row2 {
+  display: flex;
+  overflow: hidden;
+  position: relative;
+  align-self: stretch;
+  align-items: flex-start;
+  flex-shrink: 0;
+  border-color: transparent;
+  background-color: rgba(255, 255, 255, 0.00009999999747378752);
+}
+.frame1-cell4 {
+  height: 36px;
+  display: flex;
+  position: relative;
+  align-self: stretch;
+  align-items: flex-start;
+  flex-shrink: 0;
+  border-color: rgba(91, 91, 91, 1);
+  border-style: solid;
+  border-width: Symbol(figma.mixed)px;
+  margin-right: 0px;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.0020000000949949026);
+}
+.frame1-content7 {
+  width: 347px;
+  display: flex;
+  padding: 10px 12px;
+  overflow: hidden;
+  position: relative;
+  align-self: stretch;
+  align-items: flex-start;
+  flex-shrink: 0;
+  border-color: transparent;
+}
+.frame1-text60 {
+  color: rgba(255, 255, 255, 1);
+  height: auto;
+  flex-grow: 1;
+  font-size: 12px;
+  align-self: auto;
+  font-style: Regular;
+  text-align: center;
+  font-family: Inter;
+  font-weight: 400;
+  line-height: 129.99999523162842%;
+  font-stretch: normal;
+  margin-right: 0;
+  margin-bottom: 0;
+  text-decoration: none;
+}
+.frame1-cell5 {
+  display: flex;
+  position: relative;
+  flex-grow: 1;
+  align-self: stretch;
+  align-items: flex-start;
+  border-color: rgba(91, 91, 91, 1);
+  border-style: solid;
+  border-width: Symbol(figma.mixed)px;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.0020000000949949026);
+}
+.frame1-content8 {
+  display: flex;
+  padding: 10px 12px;
+  overflow: hidden;
+  position: relative;
+  align-self: stretch;
+  align-items: flex-start;
+  flex-shrink: 0;
+  border-color: transparent;
+}
+.frame1-text62 {
+  color: rgb(255, 255, 255);
+  height: auto;
+  flex-grow: 1;
+  font-size: 12px;
+  align-self: auto;
+  font-style: Regular;
+  text-align: center;
+  font-family: Inter;
+  font-weight: 400;
+  line-height: 130%;
+  font-stretch: normal;
+  margin-right: 0;
+  margin-bottom: 0;
+  text-decoration: none;
+}
 @media(max-width: 767px) {
-  .frame1-framecardrow {
-    flex: 0 0 auto;
-    width: 480px;
+  .frame1-table {
+    width: 100%;
+  }
+  .frame1-table1 {
+    width: 100%;
+  }
+  .frame1-row {
+    width: 100%;
+  }
+  .frame1-content4 {
+    justify-content: center;
+  }
+  .frame1-row1 {
+    width: 100%;
+  }
+  .frame1-content5 {
+    width: 121px;
+  }
+  .frame1-text56 {
+    text-align: center;
+  }
+  .frame1-text59 {
+    text-align: center;
+  }
+  .frame1-row2 {
+    width: 100%;
+  }
+  .frame1-content7 {
+    width: 121px;
+  }
+  .frame1-text60 {
+    text-align: center;
+  }
+  .frame1-text62 {
+    text-align: center;
   }
 }
